# glossolalia

./: .gitignore  README.md  SPEC.md  THREAT_MODEL.md  pyproject.toml
editors/: README.md
editors/vim/ftdetect/: glo.vim
editors/vim/syntax/: glo.vim
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: glossolalia.tmLanguage.json
examples/: chord.glo  drone.glo  hello.glo  litany.glo  solfeggio.glo
glo/: __init__.py  ast_nodes.py  audio.py  cli.py  environment.py  errors.py  evaluator.py  lexer.py  limits.py  osc.py  parser.py
glo/congregation/: __init__.py  client.py  server.py
glo/scrolls/: rhythms.glo  tunings.glo  waveforms.glo
tests/: conftest.py  helpers.py  test_congregation.py  test_editor_grammar.py  test_evaluator.py  test_examples.py  test_expanded.py  test_lexer.py  test_limits.py  test_phase3.py
