[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glossolalia"
version = "0.1.0"
description = "A real, interpreted programming language whose syntax reads like incantation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "noisyloop" }]
keywords = ["language", "interpreter", "audio", "osc", "livecoding", "esolang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
audio = ["sounddevice>=0.4", "numpy>=1.20"]
osc = ["python-osc>=1.8"]
all = ["sounddevice>=0.4", "numpy>=1.20", "python-osc>=1.8"]
dev = ["pytest>=7.0"]

[project.scripts]
glo = "glo.cli:main"

[project.urls]
Homepage = "https://github.com/noisyloop/glossolalia"
Repository = "https://github.com/noisyloop/glossolalia"

[tool.setuptools]
packages = ["glo"]

[tool.setuptools.package-data]
glo = ["scrolls/*.glo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
